--- a/Downloader/Downloader.csproj
+++ b/Downloader/Downloader.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
+    <FileVersion>1.1.0</FileVersion>
+    <SignAssembly>False</SignAssembly>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
